# sandbox

./: .gitignore  .gitmodules  README.md
c/FreeBSD/netstat/: nstat.c
c/Linux/bpf/: Makefile  internet_bpf.c
c/Linux/dirlist/: debug-bin  dirlist.c  release-bin
c/Linux/dirmon/: directorymonitor.c
c/Linux/dirwalk/: dirwalk.c
c/dirlist/: dirlist
c/dirwalk/: Makefile  a.out  dirwalk  dirwalk.c
c/env/: testenv  testenv.c
c/find/: find  find.c
c/inject/: Makefile  inject.c  inject.h  libpayload.c  main.c  ptrace_utils.c  ptrace_utils.h  shelltest.c  stage0.asm  standalone-shellcode.asm  target.c
c/netstat/: nstat  nstat.c
c/processlist/: .gdb_history  plist  plist.c
c/redirectors/: Makefile  redirector.c
c/shells/: Makefile  reverse_shell.c
c/uname/: test_uname  unamet
c/who/: Makefile  who.c
go/ls/: ls_filepath_walk.go
go/make/: Makefile
py/: netstat.py
py/cmd2test/: cmd2_test_pyscript.py  cmd2_test_script.txt  testmd2.py
py/compress_list/: compress_lib.py
py/examples/: conditional.py  pyscripting.py
py/perf/: looplist.py
rust/delf/: Cargo.toml
rust/elf-parse/: Cargo.toml  test.c
rust/elf_loader/: Cargo.toml
rust/elf_loader/loader/: .gdb_history  Cargo.toml  build.rs
rust/elf_loader/loader/cloader/: cloader_debug  instructor.c  instructor.h  main.c
rust/elf_loader/loader/examples/: hello
rust/elf_loader/loader/samples/: entry_point  entry_point.c  hello  hello.asm  hello_pie  hello_pie.asm  nodata.asm
rust/elf_loader/loader/src/: main.rs
rust/hello_world/: main
rust/loader/: Cargo.toml  build.rs
(+114 files in other folders)
