[package]
name = "loader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delf = { version = "0.1.0", path = "../delf" }
mmap = "0.1"
region = "2"

[build-dependencies]
cc = "*"
gcc = "*"
